--- a/original.css
+++ b/original.css
@@ -7,10 +7,13 @@ body {
 }
 
 header {
-    width: 984px;
+    width: 100%;
     margin: 0 auto;
 }
 
+wrapper {
+  width: 100%;
+}
 
 header h1 {
     margin: 55px 0 5px;
