--- a/original.css
+++ b/original.css
@@ -6,12 +6,18 @@ body {
     color: #000;
 }
 
-header {
-    width: 100%;
-    margin: 0 auto;
+a {
+  text-decoration: none;
 }
 
-wrapper {
+.container {
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+header {
+  height: 65px;
   width: 100%;
 }
 
@@ -22,38 +28,15 @@ header h1 {
 }
 
 
-#global_navi ul {
+.global_navi ul {
     list-style: none;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
-}
-
-#global_navi ul li {
-    display: inline-block;
-    width: 98px;
+    background-color: #ffa;
     text-align: center;
 }
 
-#global_navi {
-    margin-bottom: 25px;
-}
-
-#global_navi ul li a {
-    display: block;
-    padding: 5px 1px;
-    background-color: #ffa;
-    text-decoration: none;
-    
-}
-
-#global_navi ul {
-    font-size: 0;  /* 半角スペース削除 */
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-#global_navi ul li {
+.global_navi ul li {
     font-size: 14px;  /* フォントサイズ復活 */
     display: inline-block;
     width: 97px;
@@ -61,77 +44,79 @@ header h1 {
     margin-right: 1px;
 }
 
-#global_navi ul li.current a {
+.global_navi ul li a {
+    display: block;
+    padding: 5px 1px;
+    text-decoration: none;
+    
+}
+
+.global_navi {
+    margin-bottom: 25px;
+}
+
+
+.global_navi ul li.current a {
     background-color: #;
 }
 
 
-#global_navi ul li a:hover {
+.global_navi ul li a:hover {
     background-color: #aff;
 }
 
-h2 {
-    width: 984px;
-    margin: 35px auto 5px;
+.content h3 {
+    margin: 35px auto ;
     background-color: #fedcba;
     text-align: center;
 }
 
-#main_visual {
-    width: 984px;
-    height: 400px;
+.content-area p {
+    margin: 35px auto ;
+}
+
+.content-text p {
+	margin-top: 20px;
+}
+
+/h2 {
+/    width: 100%;
+/    margin: 35px auto 5px;
+/    background-color: #fedcba;
+/    text-align: center;
+/}
+
+.main_visual {
+    width: 100%;
+    height: 450px;
     margin: 0 auto 25px;
     
 }
 
 
 
-#wrapper {
-    width: 984px;
-    margin: 0 auto;
-}
+/p {
+/  margin: 10px 90px 15px 90px;
+/
+/}
+/
+/figure {
+/    margin: 10px auto 15px;
+/    text-align:center;
+/}
+/
+/figcaption {
+/    font-size: 16px;
+/    color: #9C9689;
+/    text-align: center;
+/}
+/
+/span {
+/  margin: 10px 90px 15px 90px;
+/  
+/}
+/
 
-
-h3 {
-    width: 984px;
-    margin: 35px auto 5px;
-    background-color: #fedcba;
-    text-align: center;
-}
-
-p {
-  margin: 10px 90px 15px 90px;
-
-}
-
-figure {
-    margin: 10px auto 15px;
-    text-align:center;
-}
-
-figcaption {
-    font-size: 16px;
-    color: #9C9689;
-    text-align: center;
-}
-
-span {
-  margin: 10px 90px 15px 90px;
-  
-}
-
-.accordion-title {
-    margin: 0;
-    border: 1px solid #aaa;
-    background-color: #fa6;
-    font-size: 1rem;
-}
-.accordion-title a {
-    display: block;
-    padding: 6px;
-    color: #307;
-    text-decoration: none;
-}
 
 /* アコーディオンのコンテンツ部分 */
 .accordion-content {
@@ -143,17 +128,24 @@ span {
     border: 1px solid #ccc;
 }
 
+.accordion-title {
+    margin: 0;
+    border: 1px solid #aaa;
+    background-color: #fa6;
+    font-size: 1rem;
+}
 
+.accordion-title a {
+    display: block;
+    padding: 6px;
+    color: #307;
+    text-decoration: none;
+}
 
-
-footer  {
-    width: 984px;
+footer {
+    width: 100%;
     margin: 50px auto 8px;
     background-color: #987654;
     text-align: center;
 }
 
-.container {
-  width: 80%;
-  margin: 15px auto;
-}
